[gd_scene load_steps=9 format=3 uid="uid://bsjqdvkt0u87c"]

[ext_resource type="Script" path="res://content/ui/components/button/button.gd" id="1_74x7g"]
[ext_resource type="Shader" path="res://content/ui/components/panel/glass.gdshader" id="2_db5by"]
[ext_resource type="Script" path="res://content/ui/components/panel/panel.gd" id="3_skm86"]
[ext_resource type="AudioStream" uid="uid://c1yu80uj3fsn7" path="res://assets/sound/click.wav" id="4_51sb0"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_63gmh"]
resource_local_to_scene = true
render_priority = 10
shader = ExtResource("2_db5by")
shader_parameter/color = Color(1, 1, 1, 0.3)
shader_parameter/border_color = Color(1, 1, 1, 1)
shader_parameter/edge_color = Color(0, 0, 0, 1)
shader_parameter/size = Vector2(1, 1)
shader_parameter/border_size = 0.01
shader_parameter/border_fade_in = 0.05
shader_parameter/border_fade_out = 0.0
shader_parameter/corner_radius = 0.2
shader_parameter/roughness = 0.3
shader_parameter/grain_amount = 0.02

[sub_resource type="QuadMesh" id="QuadMesh_hn875"]
size = Vector2(0.04, 0.04)

[sub_resource type="BoxShape3D" id="BoxShape3D_xwopm"]
resource_local_to_scene = true
size = Vector3(0.04, 0.04, 0.01)

[sub_resource type="BoxShape3D" id="BoxShape3D_bqjii"]
resource_local_to_scene = true
size = Vector3(0.04, 0.04, 0.06)

[node name="Button" type="Node3D" groups=["ui_focus"]]
script = ExtResource("1_74x7g")
label = "Example Text"
size = Vector3(0.04, 0.04, 0.01)

[node name="Body" type="StaticBody3D" parent="." groups=["ui_focus_skip"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.005)
collision_layer = 6
collision_mask = 0

[node name="Panel3D" type="MeshInstance3D" parent="Body"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.005)
material_override = SubResource("ShaderMaterial_63gmh")
mesh = SubResource("QuadMesh_hn875")
skeleton = NodePath("../..")
script = ExtResource("3_skm86")
size = Vector2(0.04, 0.04)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Body"]
shape = SubResource("BoxShape3D_xwopm")

[node name="Label" type="Label3D" parent="Body"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.006)
pixel_size = 0.001
double_sided = false
render_priority = 30
text = "Example Text"
font_size = 10
outline_size = 0
autowrap_mode = 3
width = 40.0

[node name="FingerArea" type="Area3D" parent="." groups=["ui_focus_skip"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.02)
collision_layer = 4
collision_mask = 0
monitoring = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="FingerArea"]
shape = SubResource("BoxShape3D_bqjii")

[node name="ClickSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_51sb0")
volume_db = -18.0
